<resources>
    <string name="app_name">MultipleRecycler</string>
    <string name="login_app">Login App</string>
    <string name="welcome_back">Hello there, Welcome Back</string>
    <string name="sign_in_to_continue">Log in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="you_can_name">You can enter your username</string>
    <string name="you_can_password">You can enter your password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="welcome">Welcome, New User</string>
    <string name="login_to_continue">Sign In to start a new account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phonenumber">Phone Number</string>
    <string name="sign_in">Sign In</string>
    <string name="are_you_new_user">Are you a new user?</string>
    <string name="field">Field cannot be empty</string>
    <string name="action_logout">Logout</string>
    <string name="detail">Display Detail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify_email">Verify email</string>
    <string name="address">Address</string>
    <string name="important_fullname">* Full name is required</string>
    <string name="pincode">Pincode</string>
    <string name="submit">Submit</string>
    <string name="click_here">Click down image to upload images</string>
    <string name="loading">Upload</string>
    <string name="your_profile">Your Profile</string>
    <string name="action_edit">Edit</string>
    <string name="warning">Are you sure?</string>
    <string name="edit_text_long">Warning! Do you want to Logout from this account?</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="verified">Verify email</string>
</resources>