<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        app:cardElevation="5dp"
        android:padding="16dp"
        android:layout_gravity="center">

    <RelativeLayout
            android:id="@+id/alertRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/cancel_alert"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_close"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:id="@+id/warningText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_text_long"
                android:layout_below="@id/cancel_alert"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:padding="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/warningText"
                android:gravity="center">

                <Button
                    android:id="@+id/alertYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:text="@string/yes" />

                <Button
                    android:id="@+id/alertNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:text="@string/no"/>

            </LinearLayout>

        </RelativeLayout>

</androidx.cardview.widget.CardView>


