<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.ProfileActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:title="@string/your_profile"
            app:titleTextColor="@color/colorPrimary"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        app:cardCornerRadius="55dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:id="@+id/profile_picture"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_baseline_account_color" />
                    </androidx.cardview.widget.CardView>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/profile_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="20sp"
                                android:textColor="@color/colorPrimary"
                                android:text="@string/full_name"
                                android:textStyle="bold"
                                android:layout_marginBottom="10dp"/>

                            <ImageView
                                android:id="@+id/profile_verified"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/ic_verified"
                                android:visibility="gone"
                                android:layout_marginLeft="3dp"/>

                        </LinearLayout>

                            <TextView
                                android:id="@+id/profile_address"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/address"
                                android:textColor="@color/colorPrimary"
                                android:layout_marginRight="5dp"/>

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_person_pin"
                            app:tint="@color/colorPrimary"
                            android:layout_marginRight="20dp"/>

                        <TextView
                            android:id="@+id/profile_pin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pincode"
                            android:textColor="@color/colorPrimary" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_mobile"
                            app:tint="@color/colorPrimary"
                            android:layout_marginRight="20dp"/>

                        <TextView
                            android:id="@+id/profile_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phonenumber"
                            android:textColor="@color/colorPrimary"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_email"
                            app:tint="@color/colorPrimary"
                            android:layout_marginRight="20dp"/>

                        <TextView
                            android:id="@+id/profile_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textColor="@color/colorPrimary"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/verify_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/verified"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/transparent"
        android:gravity="center">

            <Button
                android:id="@+id/profile_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:elevation="0dp"
                android:drawableLeft="@drawable/ic_power"
                android:text="@string/action_logout"
                android:textColor="@color/colorPrimary"
                android:drawableTint="@color/colorPrimary"
                android:textStyle="bold"/>


    </LinearLayout>
</RelativeLayout>
